2023-09-01T00:40:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6043952795 # 3749
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-01
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2780 / 0 2781 / +0 +1

2023-08-31T20:08:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6041956997 # 3748
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-31
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2779 / 0 2780 / +0 +1

2023-08-31T16:10:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6039799237 # 3747
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-31
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2778 / 0 2779 / +0 +1

2023-08-31T00:37:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6031579211 # 3743
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-31
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2777 / 0 2778 / +0 +1

2023-08-28T20:08:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6004428221 # 3730
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-28
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2776 / 0 2777 / +0 +1

2023-08-28T16:10:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6002227339 # 3729